--- a/public/modules/duanzuposts/views/create-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/create-duanzupost.client.view.html
@@ -6,11 +6,48 @@
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
+                    <label class="control-label" for="name">标题</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                        <input type="text" data-ng-model="title" id="title" class="form-control" placeholder="请填写标题" required>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">起租日期</label>
+                    <div class="controls">
+                        <input type="text" name="startDate" data-ng-model="startDate" id="startDate" class="form-control" placeholder="请填写起租日期" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">结束日期</label>
+                    <div class="controls">
+                        <input type="text" name="endDate" data-ng-model="endDate" id="endDate" class="form-control" placeholder="请填写结束日期" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">小区</label>
+                    <div class="controls">
+                        <input type="text" name="community" data-ng-model="community" id="community" class="form-control" placeholder="请填写结束小区名称" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">价格</label>
+                    <div class="controls">
+                        <input type="text" name="price" data-ng-model="price" id="price" class="form-control" placeholder="请填写租金" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">联系电话</label>
+                    <div class="controls">
+                        <input type="text" name="phone" data-ng-model="phone" id="phone" class="form-control" placeholder="请填写联系电话" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">描述</label>
+                    <div class="controls">
+                        <textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="7" placeholder="请填写描述"></textarea>
+                    </div>
+                </div>
+                
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
                 </div>
