--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -12,15 +12,15 @@
         
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
-				<a ng-switch-when="dropdown" class="dropdown-toggle">
+				<a ng-switch-when="dropdown" class="dropdown-toggle" style="cursor:pointer">
 					<span>短租平台</span>
 					<b class="caret"></b>
 				</a>
 				<ul ng-switch-when="dropdown" class="dropdown-menu">
-                    <li ng-class="{active: $uiRoute}">
+                    <li>
                         <a href="/#!/duanzuposts">招租信息列表</a>
                     </li>
-                    <li ng-class="{active: $uiRoute}">
+                    <li>
                         <a href="/#!/duanzuposts/create">发布租房信息</a>
                     <!--
                     </li>
