excludes the input ng-dirty/ng-valid css for duanzu Search Bar

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -10,6 +10,6 @@
 .ng-invalid.ng-dirty {
 	border-color: #FA787E;
 }
-.ng-valid.ng-dirty {
+.ng-valid.ng-dirty:not(.listSearchBar) {
 	border-color: #78FA89;
 }
