--- a/public/modules/duanzuposts/css/duanzuposts.css
+++ b/public/modules/duanzuposts/css/duanzuposts.css
@@ -10,9 +10,10 @@
 .listSearchBar {
 	float:right;
 	font-size: 25px;	
-	
+
 }
 
-.listSearchBar.ng-valid.ng-dirty {
+/*.listSearchBar.ng-valid.ng-dirty {
 	border-color:#DFDFDF;
 }
+*/
