updated angularJS and other modules version. Added ng-message and angular material.

--- a/public/modules/duanzuposts/views/create-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/create-duanzupost.client.view.html
@@ -1,9 +1,11 @@
 
 <!-- <script src="https://code.angularjs.org/1.3.0/angular-messages.js"></script> -->
 
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
+<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-aria.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script> -->
 
 
 
@@ -31,6 +33,8 @@
                     <div class="controls">
                         <input type="text" name="endDate" data-ng-model="endDate" id="endDate" class="form-control" placeholder="请填写结束日期" required></textarea>
                     </div>
+                    <h4>Standard date-picker</h4>
+    <md-datepicker ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="name">小区</label>
@@ -40,22 +44,14 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="name">价格</label>
-                <!--     <div class="controls">
+                    <div class="controls">
                         <input type="number" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="price" id="price" class="form-control" placeholder="请填写租金" required>
-                     
-
-
                         <div ng-messages="duanzuPostForm.price.$error">
-                     
                            <div ng-message="required">You forgot to enter your price ...</div>
-
-                           
                            <div ng-message="minlength">Your price is too short...</div>
-
                            <div ng-message="maxlength">Your price is too long...</div>
-
-                         </div>
-                    </div> -->
+                        </div> 
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="name">联系电话</label>
@@ -79,35 +75,5 @@
             </fieldset>
         </form>
     </div>
-
-  <!--   <form name="userForm">
-  <div class="field">
-    <label for="emailAddress">Enter your email address:</label>
-    <input type="email"
-           name="emailAddress"
-           ng-model="data.email"
-           ng-minlength="5"
-           ng-maxlength="30"
-           required />
-
-    <div ng-messages="userForm.emailAddress.$error">
-
-      <div ng-message="required">You forgot to enter your email address...</div>
-
-    
-      <div ng-message="minlength">Your email address is too short...</div>
-
-
-      <div ng-message="maxlength">Your email address is too long...</div>
-
-      <div ng-message="email">You did not enter your email address correctly...</div>
-    </div>
-  </div>
-
-  <input type="submit" />
-</form> -->
-
-
-
 
 </section>
