--- a/public/modules/duanzuposts/views/create-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/create-duanzupost.client.view.html
@@ -6,71 +6,122 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-aria.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script> -->
+<style>
+.md-datepicker-input-mask {
+    display:none;
+}
 
+.form-datepicker {
+    display: inline-block;
+    width:50%;
+}
+
+.text-danger {
+    font-weight:bold;
+}
+
+.requiredStar {
+    color: red;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+/* hide the outer spin and inner spin arrow for input */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+</style>
 
 
 <section data-ng-controller="DuanzupostsController">
     <div class="page-header">
-        <h1>New Duanzupost</h1>
+        <h1>新短租信息</h1><span class="requiredStar">           * 为必填项</span>
     </div>
     <div class="col-md-12">
         <form name="duanzuPostForm" class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name">标题</label>
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>标题</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="title" id="title" class="form-control" placeholder="请填写标题" required>
+                        <input type="text" name="title" data-ng-model="title" id="title" class="form-control" placeholder="请填写标题" required>
+                       <div ng-messages="duanzuPostForm.title.$error" ng-if="duanzuPostForm.title.$dirty">
+                           <div class="text-danger" ng-message="required">请填写小区名称</div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                <div class="form-group form-datepicker">
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>起租日期</label>
+                    <div ng-cloak="">
+                        <md-content>
+                          <md-datepicker data-ng-model="startDate" md-placeholder="Enter date"></md-datepicker>
+                        </md-content>
+                    </div>
+                    
+                </div>
+                <div class="form-group form-datepicker">
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>结束日期</label>
+                    <div ng-cloak="">
+                        <md-content>
+                          <md-datepicker data-ng-model="endDate" md-placeholder="Enter date"></md-datepicker>
+                        </md-content>
+                    </div>
+                   
+    
+                </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>小区</label>
+                    <div class="controls">
+                        <input type="text" name="community" data-ng-model="community" id="community" class="form-control" placeholder="请填写小区名称" required>
+                        <div ng-messages="duanzuPostForm.community.$error" ng-if="duanzuPostForm.community.$dirty">
+                           <div class="text-danger" ng-message="required">请填写小区名称</div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name">起租日期</label>
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>价格</label>
                     <div class="controls">
-                        <input type="text" name="startDate" data-ng-model="startDate" id="startDate" class="form-control" placeholder="请填写起租日期" required></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="name">结束日期</label>
-                    <div class="controls">
-                        <input type="text" name="endDate" data-ng-model="endDate" id="endDate" class="form-control" placeholder="请填写结束日期" required></textarea>
-                    </div>
-                    <h4>Standard date-picker</h4>
-    <md-datepicker ng-model="myDate" md-placeholder="Enter date"></md-datepicker>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="name">小区</label>
-                    <div class="controls">
-                        <input type="text" name="community" data-ng-model="community" id="community" class="form-control" placeholder="请填写结束小区名称" required></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="name">价格</label>
-                    <div class="controls">
-                        <input type="number" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="price" id="price" class="form-control" placeholder="请填写租金" required>
-                        <div ng-messages="duanzuPostForm.price.$error">
-                           <div ng-message="required">You forgot to enter your price ...</div>
-                           <div ng-message="minlength">Your price is too short...</div>
-                           <div ng-message="maxlength">Your price is too long...</div>
+                        <input type="number" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="price" id="price" class="form-control" placeholder="请填写月租" required>
+                        <div ng-messages="duanzuPostForm.price.$error" ng-if="duanzuPostForm.price.$dirty">
+                           <div class="text-danger" ng-message="required">请填写价格</div>
+                           <div class="text-danger" ng-message="minlength">价格太低（3－4位数）</div>
+                           <div class="text-danger" ng-message="maxlength">价格太高（3－4位数）</div>
                         </div> 
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name">联系电话</label>
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>联系电话</label>
                     <div class="controls">
-                        <input type="text" name="phone" data-ng-model="phone" id="phone" class="form-control" placeholder="请填写联系电话" required></textarea>
+                        <input type="number" ng-minlength="10" ng-maxlength="13" name="phone" data-ng-model="phone" id="phone" class="form-control" placeholder="请填写联系电话" required>
+                        <div ng-messages="duanzuPostForm.phone.$error" ng-if="duanzuPostForm.phone.$dirty">
+                           <div class="text-danger" ng-message="required">请填写联系电话</div>
+                           <div class="text-danger" ng-message="minlength">位数太少（10-13位数）</div>
+                           <div class="text-danger" ng-message="maxlength">位数太多（10-13位数）</div>
+                        </div> 
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name">描述</label>
+                    <label class="control-label" for="name"><span class="requiredStar">*</span>描述</label>
                     <div class="controls">
-                        <textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="7" placeholder="请填写描述"></textarea>
+                        <textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="7" placeholder="请填写描述" required></textarea>
+                        <div ng-messages="duanzuPostForm.description.$error" ng-if="duanzuPostForm.description.$dirty">
+                           <div class="text-danger" ng-message="required">请填写描述</div>
+                        </div>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
                 </div>
-			   <div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
+
+                <!-- commented the previous error messages. added a general message indicating 
+                that there is error in the form -->
+			    <div data-ng-show="error" class="text-danger">
+                    <strong>表格中有未填写或错误填写内容，请更正后再提交！</strong>
+					<!-- <strong data-ng-bind="error"></strong> -->
 				</div> 
             </fieldset>
         </form>
