--- a/public/modules/duanzuposts/views/create-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/create-duanzupost.client.view.html
@@ -28,7 +28,7 @@
 .requiredStar {
     color: red;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 /* hide the outer spin and inner spin arrow for input */
@@ -42,13 +42,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 <section data-ng-controller="DuanzupostsController">
     <div class="page-header">
-        <h1>新短租信息</h1><span class="requiredStar">           * 为必填项</span>
+        <h1>新短租信息 <span class="requiredStar">           * 为必填项</span></h1>
     </div>
     <div class="col-md-12">
         <form name="duanzuPostForm" class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>标题</label>
+                    <label class="control-label" for="name">标题<span class="requiredStar"> *</span></label>
                     <div class="controls">
                         <input type="text" name="title" data-ng-model="title" id="title" class="form-control" placeholder="请填写标题" required>
                        <div ng-messages="duanzuPostForm.title.$error" ng-if="duanzuPostForm.title.$dirty">
@@ -58,21 +58,21 @@ input[type="number"]::-webkit-inner-spin-button {
                 </div>
                 <div>
                 <div class="form-group form-datepicker">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>起租日期</label>
+                    <label class="control-label" for="name">起租日期<span class="requiredStar"> *</span></label>
                     <div ng-cloak="">
                         <md-content>
-                          <md-datepicker name="startDate" data-ng-model="startDateLong" md-placeholder="Enter date" ng-change="formatDate('start')" required></md-datepicker>
+                          <md-datepicker name="startDate" data-ng-model="startDateLong" md-placeholder="mm/dd/yyyy" ng-change="formatDate('start')" required></md-datepicker>
                         </md-content>
                         
                     </div>
                      
                 </div>
                 <div class="form-group form-datepicker">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>结束日期</label>
+                    <label class="control-label" for="name">结束日期<span class="requiredStar"> *</span></label>
                     <div ng-cloak="">
-                        <md-content>
-                          <md-datepicker name="endDate" data-ng-model="endDateLong" md-placeholder="Enter date" ng-change="formatDate('end')" required></md-datepicker>
-                        </md-content>
+                        <md-content> 
+                          <md-datepicker name="endDate" data-ng-model="endDateLong" md-placeholder="mm/dd/yyyy" ng-change="formatDate('end')" required></md-datepicker>
+                        </md-content> 
                 
                     </div>
                     
@@ -81,7 +81,7 @@ input[type="number"]::-webkit-inner-spin-button {
                 </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>小区</label>
+                    <label class="control-label" for="name">小区<span class="requiredStar"> *</span></label>
                     <div class="controls">
                         <input type="text" name="community" data-ng-model="community" id="community" class="form-control" placeholder="请填写小区名称" required>
                         <div ng-messages="duanzuPostForm.community.$error" ng-if="duanzuPostForm.community.$dirty">
@@ -90,9 +90,9 @@ input[type="number"]::-webkit-inner-spin-button {
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>价格</label>
+                    <label class="control-label" for="name">价格<span class="requiredStar"> *</span></label>
                     <div class="controls">
-                        <input type="number" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="price" id="price" class="form-control" placeholder="请填写月租" required>
+                        <input type="number" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="price" id="price" class="form-control" placeholder="100~9999" required>
                         <div ng-messages="duanzuPostForm.price.$error" ng-if="duanzuPostForm.price.$dirty">
                            <div class="text-danger" ng-message="required">请填写价格</div>
                            <div class="text-danger" ng-message="minlength">价格太低（3－4位数）</div>
@@ -101,7 +101,7 @@ input[type="number"]::-webkit-inner-spin-button {
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>联系电话</label>
+                    <label class="control-label" for="name">联系电话<span class="requiredStar"> *</span></label>
                     <div class="controls">
                         <input type="number" ng-minlength="10" ng-maxlength="13" name="phone" data-ng-model="phone" id="phone" class="form-control" placeholder="请填写联系电话" required>
                         <div ng-messages="duanzuPostForm.phone.$error" ng-if="duanzuPostForm.phone.$dirty">
@@ -112,7 +112,7 @@ input[type="number"]::-webkit-inner-spin-button {
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="name"><span class="requiredStar">*</span>描述</label>
+                    <label class="control-label" for="name">描述<span class="requiredStar"> *</span></label>
                     <div class="controls">
                         <textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="7" placeholder="请填写描述" required></textarea>
                         <div ng-messages="duanzuPostForm.description.$error" ng-if="duanzuPostForm.description.$dirty">
