--- a/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
@@ -1,52 +1,113 @@
+<style>
+.md-datepicker-input-mask {
+    display:none;
+
+}
+
+.md-content {
+    display: initial;
+}
+
+.form-datepicker {
+    display: inline-block;
+    width:50%;
+}
+
+.text-danger {
+    font-weight:bold;
+}
+
+.requiredStar {
+    color: red;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+/* hide the outer spin and inner spin arrow for input */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+</style>
+
 <section data-ng-controller="DuanzupostsController" data-ng-init="findOne()">
     <div class="page-header">
-        <h1>编辑租房信息</h1>
+        <h1>编辑租房信息<span class="requiredStar">  * 为必填项</span></h1>
     </div>
+
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="update()" novalidate>
-            <fieldset>
-                
-                
+            <fieldset>           
                <div class="form-group">
-                    <label class="control-label" for="title">标题</label>
+                    <label class="control-label" for="title">标题<span class="requiredStar"> *</span></label>
                     <div class="controls">
-                        <input type="text" data-ng-model="duanzupost.title" id="title" class="form-control">
+                        <input type="text" name="title" data-ng-model="duanzupost.title" id="title" class="form-control" required>
+                        <div ng-messages="duanzuPostForm.duanzupost.title.$error" ng-if="duanzuPostForm.duanzupost.title.$dirty">
+                           <div class="text-danger" ng-message="required">请填写小区名称</div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="form-group form-datepicker">
+                    <label class="control-label" for="startDate">起租日期<span class="requiredStar"> *</span></label>                 
+                    <div ng-clock="">
+                        <md-content>
+                        <md-datepicker name="startDate" data-ng-model="duanzupost.startDateLong" md-placeholder="mm/dd/yyyy" ng-change="formatDate('start')"></md-datepicker>
+                        </md-content>                  
+                    </div>
+                </div>
+
                 <div class="form-group">
-                    <label class="control-label" for="startDate">起租日期</label>
-                    <div class="controls">
-                        <input type="text" name="startDate" data-ng-model="duanzupost.startDate" id="startDate" class="form-control">
+                    <label class="control-label" for="endDate">结束日期<span class="requiredStar"> *</span></label>
+                    <div ng-clock="">
+                        <md-content>
+                        <md-datepicker name="endDate" data-ng-model="duanzupost.endDateLong" md-placeholder="mm/dd/yyyy" ng-change="formatDate('end')"></md-datepicker>
+                        </md-content>                  
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <label class="control-label" for="endDate">结束日期</label>
+                    <label class="control-label" for="community">小区<span class="requiredStar"> *</span></label>
                     <div class="controls">
-                        <input type="text" name="endDate" data-ng-model="duanzupost.endDate" id="endDate" class="form-control">
+                        <input type="text" name="community" data-ng-model="duanzupost.community" id="community" class="form-control" required>
+                        <div ng-messages="duanzuPostForm.duanzupost.community.$error" ng-if="duanzuPostForm.duanzupost.community.$dirty">
+                           <div class="text-danger" ng-message="required">请填写小区名称</div>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="community">小区</label>
-                    <div class="controls">
-                        <input type="text" name="community" data-ng-model="duanzupost.community" id="community" class="form-control">
-                    </div>
-                </div>
+
                 <div class="form-group">
                     <label class="control-label" for="price">价格</label>
                     <div class="controls">
-                        <input type="text" name="price" data-ng-model="duanzupost.price" id="price" class="form-control">
+                        <input type="text" ng-minlength="3" ng-maxlength="4" name="price" data-ng-model="duanzupost.price" id="price" class="form-control" required>
+                        <div ng-messages="duanzuPostForm.duanzupost.price.$error" ng-if="duanzuPostForm.duanzupost.price.$dirty">
+                           <div class="text-danger" ng-message="required">请填写价格</div>
+                           <div class="text-danger" ng-message="minlength">价格太低（3－4位数）</div>
+                           <div class="text-danger" ng-message="maxlength">价格太高（3－4位数）</div>
+                        </div> 
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <label class="control-label" for="phone">联系电话</label>
+                    <label class="control-label" for="phone">联系电话<span class="requiredStar"> *</span></label>
                     <div class="controls">
-                        <input type="text" name="phone" data-ng-model="duanzupost.phone" id="phone" class="form-control">
+                        <input type="text" ng-minlength="10" ng-maxlength="13" name="phone" data-ng-model="duanzupost.phone" id="phone" class="form-control" required>
+                         <div ng-messages="duanzuPostForm.duanzupost.phone.$error" ng-if="duanzuPostForm.duanzupost.phone.$dirty">
+                           <div class="text-danger" ng-message="required">请填写联系电话</div>
+                           <div class="text-danger" ng-message="minlength">位数太少（10-13位数）</div>
+                           <div class="text-danger" ng-message="maxlength">位数太多（10-13位数）</div>
+                        </div> 
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <label class="control-label" for="description">描述</label>
+                    <label class="control-label" for="description">描述<span class="requiredStar"> *</span></label>
                     <div class="controls">
-                        <textarea name="description" data-ng-model="duanzupost.description" id="description" class="form-control" cols="30" rows="7"></textarea>
+                        <textarea name="description" data-ng-model="duanzupost.description" id="description" class="form-control" cols="30" rows="7" required></textarea>
+                        <div ng-messages="duanzuPostForm.duanzupost.description.$error" ng-if="duanzuPostForm.duanzupost.description.$dirty">
+                           <div class="text-danger" ng-message="required">请填写描述</div>
+                        </div>
                     </div>
                 </div>
                 
