--- a/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
@@ -121,11 +121,11 @@ input[type="number"]::-webkit-inner-spin-button {
 
                 <div class="form-group">
                     <label class="control-label" for="price">价格
-                        <span class="requiredStar"> *</span>
+                        <span class="requiredStar"> *{{duanzupost.price}} </span>
                     </label>                 
                     <div class="controls">
                         <input 
-                            type="text"                           
+                            type="number"                           
                             ng-minlength="3" 
                             ng-maxlength="4" 
                             name="price" 
@@ -133,6 +133,7 @@ input[type="number"]::-webkit-inner-spin-button {
                             id="price" 
                             class="form-control" 
                             placeholder="price"
+                            
                             required>
                         <div 
                             ng-messages="duanzuPostForm.price.$error" 
