--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -7,7 +7,7 @@
 
    
         <a href="/#!/duanzuposts/create"><i class="material-icons addPostButton">add_circle_outline</i></a>
-             <input id="listSearchBar" type="text" ng-model="searchKeyword" class="listSearchBar">
+             <input id="listSearchBar" type="text" ng-model="searchKeyword" placeholder="search..." class="listSearchBar">
         </h1>
     </div> <!--<a href="/#!/duanzuposts/create" /a --> 
     
