added wechat to front-end, deleted social accounts.

--- a/public/modules/duanzuposts/views/create-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/create-duanzupost.client.view.html
@@ -18,7 +18,7 @@
 
 .form-datepicker {
     display: inline-block;
-    width:50%;
+    width:50%;  
 }
 
 .text-danger {
@@ -111,6 +111,14 @@
                         </div> 
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="name">微信号</label>
+                    <div class="controls">
+                        <input name="wechat" data-ng-model="wechat" id="wechat" class="form-control" placeholder="请填写微信号">
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label class="control-label" for="name">描述<span class="requiredStar"> *</span></label>
                     <div class="controls">
