--- a/public/modules/duanzuposts/views/view-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/view-duanzupost.client.view.html
@@ -10,6 +10,8 @@
         <b>小区： </b>{{ duanzupost.community }} <br />
         <b>价格： </b>{{ duanzupost.price | currency }} <br />
         <b>联系电话： </b>{{ duanzupost.phone }} <br />
+        <b>微信号： </b>{{ duanzupost.wechat }} <br />
+        
         <b>简介： </b>{{ duanzupost.description }} <br />
     </div>
     
