--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -7,25 +7,39 @@
 
    
         <a href="/#!/duanzuposts/create"><i class="material-icons addPostButton">add_circle_outline</i></a>
-             <input id="listSearchBar" type="text" ng-model="searchKeyword" placeholder="search..." class="listSearchBar">
+             <input id="listSearchBar" type="text" ng-model="searchKeyword" placeholder="Search anything..." class="listSearchBar">
         </h1>
     </div> <!--<a href="/#!/duanzuposts/create" /a --> 
     
-
     <div class="table-responsive">
         <table class="table table-hover text-center">
             <thead>
                 <tr>
-                    <th class="text-center">标题</th>
-                    <th class="text-center">起租日期</th>
-                    <th class="text-center">小区名</th>
-                    <th class="text-center">价格</th>
-                    <th class="text-center">招租人</th>
+                    <th class="text-center" ng-click="sortType = 'title'; sortReverse = !sortReverse">标题
+                        <span ng-show="sortType == 'title' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'title' && sortReverse" class="fa fa-caret-up"></span>
+                    </th>
+                    <th class="text-center" ng-click="sortType = 'startDate'; sortReverse = !sortReverse">起租日期 
+                        <span ng-show="sortType == 'startDate' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'startDate' && sortReverse" class="fa fa-caret-up"></span></th>
+                    <th class="text-center" ng-click="sortType = 'community'; sortReverse = !sortReverse">小区名
+                         <span ng-show="sortType == 'community' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'community' && sortReverse" class="fa fa-caret-up"></span>
+                    </th>
+                    <th class="text-center" ng-click="sortType = 'price'; sortReverse = !sortReverse">价格
+                         <span ng-show="sortType == 'price' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'price' && sortReverse" class="fa fa-caret-up"></span>
+                    </th>
+                    <th class="text-center" ng-click="sortType = 'user.displayName'; sortReverse = !sortReverse">招租人
+                        <span ng-show="sortType == 'user.displayName' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'user.displayName' && sortReverse" class="fa fa-caret-up"></span>
+
+                    </th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr data-ng-repeat="duanzupost in duanzuposts | filter: searchKeyword" data-ng-click="showPost(duanzupost)">
+                <tr data-ng-repeat="duanzupost in duanzuposts | filter: searchKeyword | orderBy:sortType:sortReverse" data-ng-click="showPost(duanzupost)">
                     <td>{{ duanzupost.title }}</td>
                     <td>{{ duanzupost.startDate }}</td>
                     <td>{{ duanzupost.community }}</td>
