--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -39,7 +39,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr data-ng-repeat="duanzupost in duanzuposts | filter: searchKeyword | orderBy:sortType:sortReverse" data-ng-click="showPost(duanzupost)">
+                <tr data-ng-repeat="duanzupost in duanzuposts.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) | filter: searchKeyword | orderBy:sortType:sortReverse" data-ng-click="showPost(duanzupost)">
                     <td>{{ duanzupost.title }}</td>
                     <td>{{ duanzupost.startDate }}</td>
                     <td>{{ duanzupost.community }}</td>
@@ -48,7 +48,10 @@
                     <td></td>
                 </tr>
             </tbody>
-        </table>
+            
+ 
+        </table><div style="text-align:center">
+    <uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination></div>
     </div>
     
     <div class="alert alert-warning text-center" >
