--- a/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
@@ -171,6 +171,12 @@ input[type="number"]::-webkit-inner-spin-button {
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label class="control-label" for="name">微信号</label>
+                    <div class="controls">
+                        <input name="wechat" data-ng-model="duanzupost.wechat" id="wechat" class="form-control" placeholder="请填写微信号">
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label class="control-label" for="description">描述
