added pagination call back. need to fix the twice-#-pages problems

--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -39,7 +39,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr data-ng-repeat="duanzupost in duanzuposts.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) | filter: searchKeyword | orderBy:sortType:sortReverse" data-ng-click="showPost(duanzupost)">
+                <tr data-ng-repeat="duanzupost in duanzuposts.slice(((currentPage - 1) * itemsPerPage), ((currentPage)*itemsPerPage)) | filter: searchKeyword | orderBy:sortType:sortReverse" data-ng-click="showPost(duanzupost)">
                     <td>{{ duanzupost.title }}</td>
                     <td>{{ duanzupost.startDate }}</td>
                     <td>{{ duanzupost.community }}</td>
