fixed pagination. works now

--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -51,7 +51,7 @@
             
  
         </table><div style="text-align:center">
-    <uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination></div>
+    <uib-pagination items-per-page="itemsPerPage" max-size="maxSize" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination></div>
     </div>
     
     <div class="alert alert-warning text-center" >
